--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -34,3 +34,27 @@ ul {
 #external_sites {
   background-color: #0282f9;
 }
+
+#footer_links {
+  background-image: url("./../img/footer-bg.jpg");
+  background-size: cover;
+  overflow: hidden;
+
+  h4 {
+    margin: 1rem 0;
+  }
+
+  li {
+    padding: 0.125rem 0;
+  }
+
+  a {
+    color: #b0b0b0;
+    font-weight: 400;
+  }
+
+  img {
+    transform: scale(1.5);
+    transform-origin: 100% 50%;
+  }
+}
