--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -72,7 +72,8 @@ ul {
     background-color: transparent;
     border: 2px solid #0282f9;
     padding: 0.5rem 1rem;
-    color: #e1e1e1;
+    color: #f8f9fa;
+    font-weight: 500;
   }
 
   li:nth-child(even) {
