--- a/src/assets/scss/partials/_siteHeader.scss
+++ b/src/assets/scss/partials/_siteHeader.scss
@@ -1,11 +1,18 @@
+@use './variables.scss' as *;
+
 header {
   height: 130px;
 
   li.active {
-    border-bottom: 5px solid #0282f9;
+    border-bottom: 5px solid $accent;
 
     a {
-      color: #0282f9;
+      color: $accent;
     }
+  }
+
+  a {
+    color: $darker;
+    font-weight: 700;
   }
 }
