--- a/src/assets/scss/partials/_siteHeader.scss
+++ b/src/assets/scss/partials/_siteHeader.scss
@@ -4,7 +4,7 @@ header {
   height: 130px;
 
   li.active {
-    border-bottom: 5px solid $accent;
+    box-shadow: inset 0 -5px 0 0 $accent;
 
     a {
       color: $accent;
